# database-migrate

./: .ghci  .gitignore  COPYING  LICENSE  Makefile  README  database-migrate.cabal  migrate.cabal
demo/: .ghci  Main.hs  migrate-demo.cabal
demo/Database/Migrate/: Demo.hs
demo/migrations/: 123.down.sql  123.up.sql  124.down.sql  124.up.sql
scraps/: Data.hs  Loader.hs  Main.hs  PostgreSQL.hs
src/: main.hs
src/Database/: Migrate.hs
src/Database/Migrate/: Core.hs  Kernel.hs  Main.hs  Migration.hs  MySQL.hs  MySql.hs  PostgreSQL.hs  Postgresql.hs
src/Database/Migrate/Migration/: Ddl.hs  Directory.hs  File.hs  FileInferred.hs  FileStandard.hs
test/: .ghci  Main.hs  migrate-test.cabal
test/Database/Migrate/: Tests.hs
