Name:               migrate
Version:            0.0.1
License:            BSD3
Author:             Mark Hibberd <mark@hibberd.id.au>
Maintainer:         Mark Hibberd <mark@hibberd.id.au>
Copyright:          Mark Hibberd
Synopsis:           Database scheman migration tool
Category:           Experimental
Description:        Database scheman migration tool
Homepage:           https://github.com/markhibberd/migrate
Cabal-Version:      >= 1.6
Build-Type:         Simple

Source-Repository   head
  Type:             git
  Location:         https://github.com/markhibberd/migrate.git

Flag                small_base
  Description:      Choose the new, split-up base package.

Library
  Build-Depends:
                    base >= 3 && < 5
                    , text                          >= 0.11       && < 0.12
                    , bytestring                    >= 0.9        && < 0.10
                    , time                          >= 1.0        && < 2.0
                    , postgresql-simple             >= 0.1        && < 1.0
                    , containers                    >= 0.4        && < 0.5

  GHC-Options:
                    -Wall -threaded -O2 -fno-warn-orphans

  Hs-Source-Dirs:
                    src

  Exposed-Modules:
                    Database.Migrate

  Extensions:
                    MultiParamTypeClasse
                    OverloadedStrings


